--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dvdcopy
 Section: video
 Priority: extra
 Maintainer: Benedikt Ahrens <ahrens@o2>
-Build-Depends: debhelper (>= 9), autotools-dev
+Build-Depends: debhelper (>= 9), autotools-dev, libdvdread-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/fourmond/dvdcopy
 Vcs-Git: https://github.com/fourmond/dvdcopy
