--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language:      c         
 before_install: sudo apt-get update -qq
 install:        
-  - sudo apt-get install -y build-essentials git-buildpackage pbuilder debootstrap devscripts
+  - sudo apt-get install -y build-essential git-buildpackage pbuilder debootstrap devscripts
   - sudo apt-get install debian-archive-keyring
   - sudo pbuilder create --distribution jessie --mirror ftp://ftp.us.debian.org/debian --debootstrapopts "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg" 
 script:
