--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install:
   - sudo apt-get install -y build-essential git-buildpackage pbuilder debootstrap devscripts
   - sudo apt-get install debian-archive-keyring
   - cp .pbuilder ~/.pbuilderrc 
+  - sudo cp jessie-debootstrap /usr/share/debootstrap/scripts/jessie
   - sudo DIST=jessie ARCH=i386 pbuilder create --mirror ftp://ftp.us.debian.org/debian --debootstrapopts "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg" 
 script:
   - gbp buildpackage --git-builder=pbuilder --git-pristine-tar --git-pristine-tar-commit --git-upstream-tag='%(version)s' --git-debian-branch=debian/jessie --git-ignore-new
