--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - sudo apt-get install debian-archive-keyring
   - cp .pbuilder ~/.pbuilderrc 
   - sudo cp jessie-debootstrap /usr/share/debootstrap/scripts/jessie
-  - sudo DIST=jessie ARCH=i386 pbuilder create --mirror ftp://ftp.us.debian.org/debian --debootstrapopts "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --no-check-gpg" 
+  - sudo DIST=jessie ARCH=i386 pbuilder create --mirror ftp://ftp.us.debian.org/debian --debootstrapopts " --no-check-gpg" 
 script:
   - gbp buildpackage --git-builder=pbuilder --git-pristine-tar --git-pristine-tar-commit --git-upstream-tag='%(version)s' --git-debian-branch=debian/jessie --git-ignore-new
 after_script:
