--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Git: https://github.com/fourmond/dvdcopy
 Package: dvdcopy
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description:  a bad-sectors resistant DVD-to-disc command-line program
+Description:  bad-sectors resistant DVD-to-disc command-line program
  This program copies the contents of video DVDs to disk using
  libdvdread. This means it can benefit of the present of libdvdcss on
  your computer.
